fix: runtime warnings with Java25
Fixed issue #3486